# P3_HopeForTheBest

./: BinSearchTree.cpp  BinSearchTree.hpp  CMakeLists.txt  HuffmanTree.cpp  HuffmanTree.hpp  Instructions.md  PriorityQueue.cpp  PriorityQueue.hpp  Readme.md  Scanner.cpp  TreeNode.hpp  main.cpp
